--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,10 +2,10 @@
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
 url: "http://pshisop.gq"
-baseurl: "/mcwebsite"
+baseurl: ""
 siteIcon: media/android-chrome-192x192.png
 siteYear: 2021
-siteFooterlink: https://github.com/piyush-panpaliya/mcwebsite
+siteFooterlink: http://pshisop.gq
 showinSearchEngines: true
 # googleAnalyticsID: (uncomment to use)
 
