--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 # Set this website's info
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
-url: "http://pshisop.gq"
-baseurl: ""
+url: "https://piyush-panpaliya.github.io/mcwebsite/"
+baseurl: "https://piyush-panpaliya.github.io/mcwebsite/"
 siteIcon: media/android-chrome-192x192.png
 siteYear: 2021
 siteFooterlink: http://pshisop.gq
